# tmp-mail

./: Cargo.toml
src/: database.rs  lib.rs  main.rs
src/smtp/: mod.rs  server.rs  state_machine.rs
